traefik/traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v3.1
        args:
        - --api.dashboard=true
        - --api.insecure=true
        - --providers.kubernetesingress=true
        - --providers.kubernetescrd=true
        - --entrypoints.web.address=:80
        - --log.level=INFO
        ports:
        - containerPort: 80
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.25.105
  selector:
    app: traefik
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: dashboard
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: traefik.io/ingress-controller
